--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,24 +1,35 @@
 body {
-text-align: center;
-color: Navy;
-background-color: #EE82EE;
+    text-align: center;
+    color: Navy;
+    background-color: #EE82EE;
+    list-style-type: none;
+    font-size: larger;
 }
 
 table {
-  text-align: center;
-  color: DarkBlue;
-  border-collapse: collapse;
-  border: 3px solid grey;
-  border-top: 3px solid grey;
-  font-family: "Times New Roman", Times, serif;
-  margin: 0 auto;
+    text-align: center;
+    color: DarkBlue;
+    border-collapse: collapse;
+    border: 3px solid grey;
+    border-top: 3px solid grey;
+    font-family: "Times New Roman", Times, serif;
+    margin: 0 auto;
 }
 
 th, td {
-   border: 1px solid grey;
-   text-align: center;
+    border: 1px solid grey;
+    text-align: center;
 }
 
 td {
-   border-bottom: 1px solid grey;
+    border-bottom: 1px solid grey;
+}
+
+a {
+    color: maroon;
+    font-size: large;
+}
+
+ul {
+    list-style-type: none;
 }
